packagelon com.twittelonr.follow_reloncommelonndations.common.modelonls

import com.twittelonr.follow_reloncommelonndations.logging.{thriftscala => offlinelon}
import com.twittelonr.follow_reloncommelonndations.{thriftscala => t}
import com.twittelonr.helonrmit.constants.AlgorithmFelonelondbackTokelonns
import com.twittelonr.ml.api.thriftscala.{DataReloncord => TDataReloncord}
import com.twittelonr.ml.api.util.ScalaToJavaDataReloncordConvelonrsions
import com.twittelonr.timelonlinelons.configapi.HasParams
import com.twittelonr.timelonlinelons.configapi.Params
import com.twittelonr.product_mixelonr.corelon.modelonl.common.UnivelonrsalNoun
import com.twittelonr.product_mixelonr.corelon.modelonl.common.idelonntifielonr.CandidatelonSourcelonIdelonntifielonr

trait Followablelonelonntity elonxtelonnds UnivelonrsalNoun[Long]

trait Reloncommelonndation
    elonxtelonnds Followablelonelonntity
    with HasRelonason
    with HasAdMelontadata
    with HasTrackingTokelonn {
  val scorelon: Option[Doublelon]

  delonf toThrift: t.Reloncommelonndation

  delonf toOfflinelonThrift: offlinelon.OfflinelonReloncommelonndation
}

caselon class CandidatelonUselonr(
  ovelonrridelon val id: Long,
  ovelonrridelon val scorelon: Option[Doublelon] = Nonelon,
  ovelonrridelon val relonason: Option[Relonason] = Nonelon,
  ovelonrridelon val uselonrCandidatelonSourcelonDelontails: Option[UselonrCandidatelonSourcelonDelontails] = Nonelon,
  ovelonrridelon val adMelontadata: Option[AdMelontadata] = Nonelon,
  ovelonrridelon val trackingTokelonn: Option[TrackingTokelonn] = Nonelon,
  ovelonrridelon val dataReloncord: Option[RichDataReloncord] = Nonelon,
  ovelonrridelon val scorelons: Option[Scorelons] = Nonelon,
  ovelonrridelon val infoPelonrRankingStagelon: Option[scala.collelonction.Map[String, RankingInfo]] = Nonelon,
  ovelonrridelon val params: Params = Params.Invalid,
  ovelonrridelon val elonngagelonmelonnts: Selonq[elonngagelonmelonntTypelon] = Nil,
  ovelonrridelon val reloncommelonndationFlowIdelonntifielonr: Option[String] = Nonelon)
    elonxtelonnds Reloncommelonndation
    with HasUselonrCandidatelonSourcelonDelontails
    with HasDataReloncord
    with HasScorelons
    with HasParams
    with Haselonngagelonmelonnts
    with HasReloncommelonndationFlowIdelonntifielonr
    with HasInfoPelonrRankingStagelon {

  val rankelonrIdsStr: Option[Selonq[String]] = {
    val strs = scorelons.map(_.scorelons.flatMap(_.rankelonrId.map(_.toString)))
    if (strs.elonxists(_.nonelonmpty)) strs elonlselon Nonelon
  }

  val thriftDataReloncord: Option[TDataReloncord] = for {
    richDataReloncord <- dataReloncord
    dr <- richDataReloncord.dataReloncord
  } yielonld {
    ScalaToJavaDataReloncordConvelonrsions.javaDataReloncord2ScalaDataReloncord(dr)
  }

  val toOfflinelonUselonrThrift: offlinelon.OfflinelonUselonrReloncommelonndation = {
    val scoringDelontails =
      if (uselonrCandidatelonSourcelonDelontails.iselonmpty && scorelon.iselonmpty && thriftDataReloncord.iselonmpty) {
        Nonelon
      } elonlselon {
        Somelon(
          offlinelon.ScoringDelontails(
            candidatelonSourcelonDelontails = uselonrCandidatelonSourcelonDelontails.map(_.toOfflinelonThrift),
            scorelon = scorelon,
            dataReloncord = thriftDataReloncord,
            rankelonrIds = rankelonrIdsStr,
            infoPelonrRankingStagelon = infoPelonrRankingStagelon.map(_.mapValuelons(_.toOfflinelonThrift))
          )
        )
      }
    offlinelon
      .OfflinelonUselonrReloncommelonndation(
        id,
        relonason.map(_.toOfflinelonThrift),
        adMelontadata.map(_.adImprelonssion),
        trackingTokelonn.map(_.toOfflinelonThrift),
        scoringDelontails = scoringDelontails
      )
  }

  ovelonrridelon val toOfflinelonThrift: offlinelon.OfflinelonReloncommelonndation =
    offlinelon.OfflinelonReloncommelonndation.Uselonr(toOfflinelonUselonrThrift)

  val toUselonrThrift: t.UselonrReloncommelonndation = {
    val scoringDelontails =
      if (uselonrCandidatelonSourcelonDelontails.iselonmpty && scorelon.iselonmpty && thriftDataReloncord.iselonmpty && scorelons.iselonmpty) {
        Nonelon
      } elonlselon {
        Somelon(
          t.ScoringDelontails(
            candidatelonSourcelonDelontails = uselonrCandidatelonSourcelonDelontails.map(_.toThrift),
            scorelon = scorelon,
            dataReloncord = thriftDataReloncord,
            rankelonrIds = rankelonrIdsStr,
            delonbugDataReloncord = dataReloncord.flatMap(_.delonbugDataReloncord),
            infoPelonrRankingStagelon = infoPelonrRankingStagelon.map(_.mapValuelons(_.toThrift))
          )
        )
      }
    t.UselonrReloncommelonndation(
      uselonrId = id,
      relonason = relonason.map(_.toThrift),
      adImprelonssion = adMelontadata.map(_.adImprelonssion),
      trackingInfo = trackingTokelonn.map(TrackingTokelonn.selonrializelon),
      scoringDelontails = scoringDelontails,
      reloncommelonndationFlowIdelonntifielonr = reloncommelonndationFlowIdelonntifielonr
    )
  }

  ovelonrridelon val toThrift: t.Reloncommelonndation =
    t.Reloncommelonndation.Uselonr(toUselonrThrift)

  delonf selontFollowProof(followProofOpt: Option[FollowProof]): CandidatelonUselonr = {
    this.copy(
      relonason = relonason
        .map { relonason =>
          relonason.copy(
            accountProof = relonason.accountProof
              .map { accountProof =>
                accountProof.copy(followProof = followProofOpt)
              }.orelonlselon(Somelon(AccountProof(followProof = followProofOpt)))
          )
        }.orelonlselon(Somelon(Relonason(Somelon(AccountProof(followProof = followProofOpt)))))
    )
  }

  delonf addScorelon(scorelon: Scorelon): CandidatelonUselonr = {
    val nelonwScorelons = scorelons match {
      caselon Somelon(elonxistingScorelons) => elonxistingScorelons.copy(scorelons = elonxistingScorelons.scorelons :+ scorelon)
      caselon Nonelon => Scorelons(Selonq(scorelon))
    }
    this.copy(scorelons = Somelon(nelonwScorelons))
  }
}

objelonct CandidatelonUselonr {
  val DelonfaultCandidatelonScorelon = 1.0

  // for convelonrting candidatelon in ScoringUselonrRelonquelonst
  delonf fromUselonrReloncommelonndation(candidatelon: t.UselonrReloncommelonndation): CandidatelonUselonr = {
    // welon only uselon thelon primary candidatelon sourcelon for now
    val uselonrCandidatelonSourcelonDelontails = for {
      scoringDelontails <- candidatelon.scoringDelontails
      candidatelonSourcelonDelontails <- scoringDelontails.candidatelonSourcelonDelontails
    } yielonld UselonrCandidatelonSourcelonDelontails(
      primaryCandidatelonSourcelon = candidatelonSourcelonDelontails.primarySourcelon
        .flatMap(AlgorithmFelonelondbackTokelonns.TokelonnToAlgorithmMap.gelont).map { algo =>
          CandidatelonSourcelonIdelonntifielonr(algo.toString)
        },
      candidatelonSourcelonScorelons = fromThriftScorelonMap(candidatelonSourcelonDelontails.candidatelonSourcelonScorelons),
      candidatelonSourcelonRanks = fromThriftRankMap(candidatelonSourcelonDelontails.candidatelonSourcelonRanks),
      addrelonssBookMelontadata = Nonelon
    )
    CandidatelonUselonr(
      id = candidatelon.uselonrId,
      scorelon = candidatelon.scoringDelontails.flatMap(_.scorelon),
      relonason = candidatelon.relonason.map(Relonason.fromThrift),
      uselonrCandidatelonSourcelonDelontails = uselonrCandidatelonSourcelonDelontails,
      trackingTokelonn = candidatelon.trackingInfo.map(TrackingTokelonn.delonselonrializelon),
      reloncommelonndationFlowIdelonntifielonr = candidatelon.reloncommelonndationFlowIdelonntifielonr,
      infoPelonrRankingStagelon = candidatelon.scoringDelontails.flatMap(
        _.infoPelonrRankingStagelon.map(_.mapValuelons(RankingInfo.fromThrift)))
    )
  }

  delonf fromThriftScorelonMap(
    thriftMapOpt: Option[scala.collelonction.Map[String, Doublelon]]
  ): Map[CandidatelonSourcelonIdelonntifielonr, Option[Doublelon]] = {
    (for {
      thriftMap <- thriftMapOpt.toSelonq
      (algoNamelon, scorelon) <- thriftMap.toSelonq
    } yielonld {
      CandidatelonSourcelonIdelonntifielonr(algoNamelon) -> Somelon(scorelon)
    }).toMap
  }

  delonf fromThriftRankMap(
    thriftMapOpt: Option[scala.collelonction.Map[String, Int]]
  ): Map[CandidatelonSourcelonIdelonntifielonr, Int] = {
    (for {
      thriftMap <- thriftMapOpt.toSelonq
      (algoNamelon, rank) <- thriftMap.toSelonq
    } yielonld {
      CandidatelonSourcelonIdelonntifielonr(algoNamelon) -> rank
    }).toMap
  }
}
